samples/_failures_safe/1761703616_8e41f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83d19592.c: In function ‘main’:
./samples/SAFE/__tmp_83d19592.c:157:12: error: expected identifier or ‘(’ at end of input
  157 |     struct compression_result
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_83d19592.c:157:12: error: expected declaration or statement at end of input
